# NEO

./: .env.example  .gitignore  .pre-commit-config.yaml  AUTONOMOUS.md  README.md  VISION_PRIVACY.md  _edit_final.py  _p.py  audio_processing.py  install.ps1  install.sh  list_mac_windows.py  list_windows.py  main.py  old_declarations.py  orbcore.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.py  spotlight_overlay.py  start_aria.bat  test_memory.py  ui.py  ui_blocks.py  ui_buddy.py  ui_camera_preview.py  ui_hud.py  ui_hud_threejs.py  ui_orb.py  ui_panel.py  ui_preview.py  ui_prism_orb.py  ui_screen_border.py  ui_siri_bar.py  ui_theme.py  ui_tray.py  uninstall.ps1  uninstall.sh  (+1 more)
actions/: app_resolver.py  browser_control.py  browser_native.py  calendar.py  code_helper.py  computer_control.py  computer_settings.py  confirm_gate.py  contacts.py  create_action.py  create_presentation.py  desktop.py  dev_agent.py  dev_run.py  discuss_project.py  document_tools.py  download_control.py  editor_ai_launch.py  editor_open.py  exa_search.py  fast_fetch.py  file_controller.py  file_processor.py  flight_finder.py  game_updater.py  gui_control.py  list_format.py  list_manager.py  mind_palace.py  notes.py  open_app.py  organizer.py  product_parse.py  project_builder.py  project_research.py  project_session.py  project_starter.py  reminder.py  screen_act.py  screen_analyze.py  (+13 more)
agent/: error_handler.py  executor.py  planner.py
assets/: sphere_visualizer.html
config/: __init__.py  api_keys.example.json  api_keys.json
core/: __init__.py  action_context.py  (+27 more)
(+38 files in other folders)
